movie specification filtering my genres and title, formating file